--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     package="com.janus.a2a1myplatdiarybrandanjones">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-feature android:name="android.hardware.camera2" android:required="false"/>
+
 
     <application
         android:allowBackup="true"
@@ -18,6 +23,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        a provider gives us tempoaray access to things like writing to stirage-->
+<!--        authorities: just a unique identifier
+             exported: whether our data is available outside the app
+             grantUriPermissions: to grat us temporary permission to this URI
+
+             -->
+        <provider
+            android:authorities="com.janus.a2a1myplatdiarybrandanjones.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
     </application>
 
 </manifest>
