--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
 
+    //FaceBook Login
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
 
 }
