--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -68,13 +67,15 @@ dependencies {
     //FIREBASE
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
-   //FOR AUTHUI
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
+
+    //FOR AUTHUI
     implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
 
     //FaceBook Login
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     //phone number logn
     implementation 'com.google.firebase:firebase-auth:19.3.1'
-
+    implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
 
 }
