--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,9 +75,12 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
 
     //FaceBook Login
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     //phone number logn
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
+
+    //cproutines
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
 }
